Changes for 4.1.0:

- Update pom for CODAC 7.3

Changes for 4.0.0:

- Project renamed from sequencer-plugin-epics to oac-tree-plugin-epics

Changes for 3.3.0:

- Relax conditions on PvAccessClient variable with scalar type
- Sphinx documentation
- Add unit tests
- Changed C++ standard to C++17

Changes for 3.2.0:

- Adapt API changes of sequencer v3.2
- Fix CA variable behaviour when disconnected

Changes for 3.1.0:

- Adapt API changes of sequencer v3.1
- Update cmake configuration

Changes for 3.0.0:

- Adapt to attribute system of sequencer v3.0

Changes for 2.1.0:

- Adapt to sup-dto v1.1
- Adapt to attribute system of sequencer v2.1
- Move 'Log' instruction to sequencer itself
- Add functional tests

Changes for 2.0.0:

- Migrated to new sup-dto

Changes for 1.1.0:

- Create ChangeLog, update pom to current development (7.1.0)